# documentation-ai

./: .gitignore  README.md  docker-compose.yaml  docstring-ai-0.0.1.vsix  extension.js  main.py  package-lock.json  package.json  pyproject.toml
api/: Dockerfile  api.py
api/infrastructure/repositories/: dockerRepositories.py  documentatioRepositorie.py
api/interfaces/http/router/: docker.py  documentation.py
mcp/: Dockerfile  agent.py  server.py
